# ts-transformer

./: .gitignore  CHANGE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/tf_transformer/: __init__.py  block.py  decoder.py  encoder.py  layer.py  main.py  transformer.py
tests/: test_transformer.py
