[project]
name = "tf-transformer"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stevan H. Moeladi", email = "stevan.moeladi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "tensorflow>=2.20.0",
]

[project.scripts]
tf-transformer = "tf_transformer:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--maxfail=1 --cov=tf_transformer"


